<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/tview_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_eight"
        android:layout_marginRight="@dimen/margin_eight"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:textColor="@color/text_black"
        android:text="@string/lbl_welcome"
        android:textSize="@dimen/text_thirty"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textStyle="bold"
        android:paddingLeft="@dimen/padding_five"
        android:paddingRight="@dimen/padding_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Click Button Text -->
    <TextView
        android:id="@+id/tview_lbl_click_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_eight"
        android:layout_marginRight="@dimen/margin_eight"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:textColor="@color/text_grey"
        android:text="@string/lbl_click_buttons"
        android:textSize="@dimen/text_sixteen"
        android:textAlignment="textStart"
        android:gravity="start"
        android:paddingLeft="@dimen/padding_five"
        android:paddingRight="@dimen/padding_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tview_welcome" />


    <!-- Button Android -->
    <Button
        android:id="@+id/btn_android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/button_shaded_radius_twenty"
        android:text="@string/btn_android"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tview_lbl_click_buttons" />

    <!-- Button iOS -->
    <Button
        android:id="@+id/btn_ios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/button_shaded_radius_twenty"
        android:text="@string/btn_ios"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_android" />

    <!-- Button Windows -->
    <Button
        android:id="@+id/btn_windows"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/button_shaded_radius_twenty"
        android:text="@string/btn_windows"
        android:textSize="@dimen/text_fifteen"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ios" />

</android.support.constraint.ConstraintLayout>
